# cradle

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  roadmap.md  vision.md
src/cradle/: __init__.py  main.py  oracle.py  perception.py  registry.py  runtime.py
tests/: test_oracle.py  test_registry.py  test_runtime.py
